populated navigation bar with placeholder icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Fundo</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">Fundo</div>
+        <ul class="nav-links">
+            <li><img src="./icons/search.svg" alt=""></li>
+            <li><img src="./icons/stats.svg" alt=""></li>
+        </ul>
+    </nav>
 </body>
 </html>
