populated content for the introduction section

--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
             <li><img src="./icons/stats.svg" alt=""></li>
         </ul>
     </nav>
+    <main>
+        <section class="introduction">
+            <div class="introduction__content">
+                <h1>We'll build house of your Dream</h1>
+                <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
+                <div class="introduction__content-action">
+                    <button class="btn dark">Buy Now</button>
+                    <button class="btn">Explore</button>
+                </div>
+            </div>
+            <img src="./images/image-stand-out.jpg" alt="">
+        </section>
+    </main>
 </body>
 </html>
