populated content for our offers section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,30 @@
     </nav>
     <main>
         <section class="introduction">
-            <div class="introduction__content">
+            <div class="introduction__contents container">
                 <h1>We'll build house of your Dream</h1>
                 <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
                 <div class="introduction__content-action">
                     <button class="btn dark">Buy Now</button>
                     <button class="btn">Explore</button>
                 </div>
+                <img src="./images/image-stand-out.jpg" alt="">
             </div>
-            <img src="./images/image-stand-out.jpg" alt="">
+        </section>
+        <section class="offers">
+            <div class="container offers__contents-grid">
+                <div class="offers__contents">
+                    <h2>What we are offering</h2>
+                    <p class="facilities">Property facilities</p>
+                    <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
+                </div>
+                <img src="./images/image-stand-out.jpg" alt="">
+                <img src="./images/image-stand-out.jpg" alt="">
+                <div class="arrow"><img src="./icons/arrow_right.svg" alt=""></div>
+                <img src="./images/image-stand-out.jpg" alt="">
+                <img src="./images/image-stand-out.jpg" alt="">
+                <img src="./images/image-stand-out.jpg" alt="">
+            </div>
         </section>
     </main>
 </body>
