created footer for homapage

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <button class="btn dark">Buy Now</button>
                     <button class="btn">Explore</button>
                 </div>
-                <img src="./images/image-stand-out.jpg" alt="">
+                <img src="./images/image-photography.jpg" alt="">
             </div>
         </section>
         <section class="offers">
             <div class="container offers__contents-grid">
                 <div class="offers__contents">
                     <h2>What we are offering</h2>
-                    <p class="facilities">Property facilities</p>
+                    <h3 class="secondary-heading">Property facilities</h3>
                     <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
                 </div>
                 <img src="./images/image-stand-out.jpg" alt="">
@@ -41,6 +41,56 @@
                 <img src="./images/image-stand-out.jpg" alt="">
             </div>
         </section>
+        <section class="gallery">
+            <div class="container">
+                <h2>Plans and Dimensions</h2>
+                <h3 class="secondary-heading">Rooms Gallery</h3>
+                <p>We have 5000+ reviews and our customers trust on our properties and quality products. If you order more than...</p>
+                <div class="gallery">
+                    <img src="./images/image-stand-out.jpg" alt="">
+                    <img src="./images/image-stand-out.jpg" alt="">
+                    <img src="./images/image-stand-out.jpg" alt="">
+                    <img src="./images/image-stand-out.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="get-in-touch">
+            <div class="container">
+                <h2>Interesting to buy property</h2>
+                <p>If you are interested to but property please contact us, we will call tou shortly to fufill your requirements and property</p>
+                <button class="btn dark">Get in touch</button>
+            </div>
+        </section>
+        <footer>
+            <div class="services">
+                <h3>Our services</h3>
+                <ul class="links">
+                    <li><a href="">Gym</a></li>
+                    <li><a href="">Internet</a></li>
+                    <li><a href="">Fireplace</a></li>
+                    <li><a href="">Parking</a></li>
+                    <li><a href="">Swimming poool</a></li>
+                </ul>
+            </div>
+            <div class="services">
+                <h3>Our Services</h3>
+                <ul class="links">
+                    <li><a href="">Gym</a></li>
+                    <li><a href="">Internet</a></li>
+                    <li><a href="">Fireplace</a></li>
+                    <li><a href="">Parking</a></li>
+                    <li><a href="">Swimming poool</a></li>
+                </ul>
+            </div>
+            <div class="address">
+                <h3>Our Address</h3>
+                <ul class="links">
+                    <li><a href="">121 King St, VIC3000, us</a></li>
+                    <li><a href="">888-123-42278</a></li>
+                    <li><a href="">fundo@fundohome.com</a></li>
+                </ul>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
