created styles.css file and reset default margin, padding and box-sizing

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <nav>
+    <nav class="container">
         <div class="logo">Fundo</div>
         <ul class="nav-links">
             <li><img src="./icons/search.svg" alt=""></li>
@@ -61,7 +62,7 @@
                 <button class="btn dark">Get in touch</button>
             </div>
         </section>
-        <footer>
+        <footer class="container">
             <div class="services">
                 <h3>Our services</h3>
                 <ul class="links">
