completed styling and reposiveness of all sections

--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <nav class="container">
-        <div class="logo">Fundo</div>
-        <ul class="nav-links">
-            <li><img src="./icons/search.svg" alt=""></li>
-            <li><img src="./icons/stats.svg" alt=""></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="container">
+            <div class="logo">Fundo</div>
+            <ul class="nav-links">
+                <li><img src="./icons/search.svg" alt=""></li>
+                <li><img src="./icons/stats.svg" alt=""></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section class="introduction">
             <div class="introduction__contents container">
-                <h1>We'll build house of your Dream</h1>
-                <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
-                <div class="introduction__content-action">
-                    <button class="btn dark">Buy Now</button>
-                    <button class="btn">Explore</button>
+                <div class="content">
+                    <h1>We'll build house of your Dream</h1>
+                    <p class="paragraph">We have 5000+ reviews and our customers trust on our properties and quality products.</p>
+                    <div class="introduction__content-action">
+                        <button class="btn dark">Buy Now</button>
+                        <button class="btn">Explore</button>
+                    </div>
                 </div>
-                <img src="./images/image-photography.jpg" alt="">
             </div>
         </section>
         <section class="offers">
@@ -32,23 +35,23 @@
                 <div class="offers__contents">
                     <h2>What we are offering</h2>
                     <h3 class="secondary-heading">Property facilities</h3>
-                    <p>We have 5000+ reviews and our customers trust on our properties and quality products.</p>
+                    <p class="paragraph">We have 5000+ reviews and our customers trust on our properties and quality products.</p>
                 </div>
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
-                <div class="arrow"><img src="./icons/arrow_right.svg" alt=""></div>
+                <button class="arrow"><img src="./icons/arrow_right.svg" alt=""></button>
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
             </div>
         </section>
         <section class="gallery">
-            <div class="container">
+            <div class="gallery__content container">
                 <h2>Plans and Dimensions</h2>
                 <h3 class="secondary-heading">Rooms Gallery</h3>
-                <p>We have 5000+ reviews and our customers trust on our properties and quality products. If you order more than...</p>
-                <div class="gallery">
-                    <img src="./images/image-stand-out.jpg" alt="">
+                <p class="paragraph">We have 5000+ reviews and our customers trust on our properties and quality products. If you order more than...</p>
+                <div class="gallery-grid">
+                    <img class="wide-image" src="./images/image-stand-out.jpg" alt="">
                     <img src="./images/image-stand-out.jpg" alt="">
                     <img src="./images/image-stand-out.jpg" alt="">
                     <img src="./images/image-stand-out.jpg" alt="">
@@ -58,38 +61,38 @@
         <section class="get-in-touch">
             <div class="container">
                 <h2>Interesting to buy property</h2>
-                <p>If you are interested to but property please contact us, we will call tou shortly to fufill your requirements and property</p>
+                <p class="paragraph">If you are interested to but property please contact us, we will call you shortly to fufill your requirements and property</p>
                 <button class="btn dark">Get in touch</button>
             </div>
         </section>
-        <footer class="container">
-            <div class="services">
-                <h3>Our services</h3>
-                <ul class="links">
-                    <li><a href="">Gym</a></li>
-                    <li><a href="">Internet</a></li>
-                    <li><a href="">Fireplace</a></li>
-                    <li><a href="">Parking</a></li>
-                    <li><a href="">Swimming poool</a></li>
-                </ul>
-            </div>
-            <div class="services">
-                <h3>Our Services</h3>
-                <ul class="links">
-                    <li><a href="">Gym</a></li>
-                    <li><a href="">Internet</a></li>
-                    <li><a href="">Fireplace</a></li>
-                    <li><a href="">Parking</a></li>
-                    <li><a href="">Swimming poool</a></li>
-                </ul>
-            </div>
-            <div class="address">
-                <h3>Our Address</h3>
-                <ul class="links">
-                    <li><a href="">121 King St, VIC3000, us</a></li>
-                    <li><a href="">888-123-42278</a></li>
-                    <li><a href="">fundo@fundohome.com</a></li>
-                </ul>
+        <footer>
+            <div class="container">
+                <div class="services">
+                    <h3>Our services</h3>
+                    <ul class="links">
+                        <li><a href="">Gym</a></li>
+                        <li><a href="">Internet</a></li>
+                        <li><a href="">Fireplace</a></li>
+                        <li><a href="">Parking</a></li>
+                        <li><a href="">Swimming poool</a></li>
+                    </ul>
+                </div>
+                <div class="services">
+                    <h3>Our Services</h3>
+                    <ul class="links">
+                        <li><a href="">Reporting</a></li>
+                        <li><a href="">Get in touch</a></li>
+                        <li><a href="">Management</a></li>
+                    </ul>
+                </div>
+                <div class="address">
+                    <h3>Our Address</h3>
+                    <ul class="links">
+                        <li><a href="">121 King St, VIC3000, US</a></li>
+                        <li><a href="">888-123-42278</a></li>
+                        <li><a href="">fundo@fundohome.com</a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </main>
