styled webpage footer and implemented reponsivess across all devices

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
-                <button class="arrow"><img src="./icons/arrow_right.svg" alt=""></button>
+                <a href="https://google.com" class="arrow"><img src="./icons/arrow_right.svg" alt=""></a>
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
                 <img src="./images/image-stand-out.jpg" alt="">
