updated offer images

--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
                     <h3 class="secondary-heading">Property facilities</h3>
                     <p class="paragraph">We have 5000+ reviews and our customers trust on our properties and quality products.</p>
                 </div>
-                <img src="./images/image-stand-out.jpg" alt="">
-                <img src="./images/image-stand-out.jpg" alt="">
+                <div class="icon gym">
+                    <img src="./icons/gym.svg" alt="">
+                </div>
+                <div class="icon park">
+                    <img src="./icons/parking.svg" alt="">
+                </div>
                 <a href="https://google.com" class="arrow"><img src="./icons/arrow_right.svg" alt=""></a>
-                <img src="./images/image-stand-out.jpg" alt="">
-                <img src="./images/image-stand-out.jpg" alt="">
-                <img src="./images/image-stand-out.jpg" alt="">
+                <div class="icon fire">
+                    <img src="./icons/fireplace.svg" alt="">
+                </div>
+                <div class="icon pool">
+                    <img src="./icons/swimming-pool.svg" alt="">
+                </div>
+                <div class="icon internet">
+                    <img src="./icons/internet.svg" alt="">
+                </div>
             </div>
         </section>
         <section class="gallery">
