--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="logo">Fundo</div>
             <ul class="nav-links">
                 <li><img src="./icons/search.svg" alt=""></li>
-                <li><img src="./icons/stats.svg" alt=""></li>
+                <li><img src="./icons/window.svg" alt=""></li>
             </ul>
         </nav>
     </header>
