adjusted the header and changed gallery images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
                 <li><img src="./icons/window.svg" alt=""></li>
             </ul>
         </nav>
-    </header>
-    <main>
         <section class="introduction">
             <div class="introduction__contents container">
                 <div class="content">
@@ -30,6 +28,8 @@
                 </div>
             </div>
         </section>
+    </header>
+    <main>
         <section class="offers">
             <div class="container offers__contents-grid">
                 <div class="offers__contents">
@@ -61,10 +61,10 @@
                 <h3 class="secondary-heading">Rooms Gallery</h3>
                 <p class="paragraph">We have 5000+ reviews and our customers trust on our properties and quality products. If you order more than...</p>
                 <div class="gallery-grid">
-                    <img class="wide-image" src="./images/image-stand-out.jpg" alt="">
-                    <img src="./images/image-stand-out.jpg" alt="">
-                    <img src="./images/image-stand-out.jpg" alt="">
-                    <img src="./images/image-stand-out.jpg" alt="">
+                    <img class="wide-image" src="./images/interior-main.jpg" alt="">
+                    <img src="./images/interior-1.jpg" alt="">
+                    <img src="./images/interior-2.jpg" alt="">
+                    <img src="./images/interior-3.jpg" alt="">
                 </div>
             </div>
         </section>
