--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <button class="btn">Explore</button>
                     </div>
                 </div>
+                <!-- <img src="./images/house.png" alt=""> -->
             </div>
         </section>
     </header>
