added description for offer icons

--- a/index.html
+++ b/index.html
@@ -40,19 +40,24 @@
                 </div>
                 <div class="icon gym">
                     <img src="./icons/gym.svg" alt="">
+                    <p class="text">Gym</p>
                 </div>
                 <div class="icon park">
                     <img src="./icons/parking.svg" alt="">
+                    <p class="text">Parking</p>
                 </div>
                 <a href="https://google.com" class="arrow"><img src="./icons/arrow_right.svg" alt=""></a>
                 <div class="icon fire">
                     <img src="./icons/fireplace.svg" alt="">
+                    <p class="text">Fireplace</p>
                 </div>
                 <div class="icon pool">
                     <img src="./icons/swimming-pool.svg" alt="">
+                    <p class="text">Swimming Pool</p>
                 </div>
                 <div class="icon internet">
                     <img src="./icons/internet.svg" alt="">
+                    <p class="text">Internet</p>
                 </div>
             </div>
         </section>
